fixes padding on mobile

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -234,7 +234,7 @@ article{
 
 		}
 		@include mobile{
-			padding:10px;
+			padding:0;
 			margin:15px auto;
 			width:100%;
 				
